--- a/requirements.txt
+++ b/requirements.txt
@@ -44,9 +44,9 @@ ml_dtypes==0.5.1
 namex==0.0.8
 narwhals==1.31.0
 networkx==3.2.1
-numpy==2.0.2
+numpy==1.21.6
 oauth2client==4.1.3
-opencv-python==4.11.0.86
+# opencv-python==4.11.0.86
 opencv-python-headless==4.11.0.86
 opt_einsum==3.4.0
 optree==0.14.1
@@ -72,7 +72,7 @@ requests==2.32.3
 rich==13.9.4
 rsa==4.9
 scikit-image==0.21.0
-scipy==1.7.3
+scipy==1.5.4
 SimpleITK==2.4.1
 six==1.17.0
 tensorboard==2.19.0
